# DemoRust

./: LICENSE
c_ffi/: Cargo.toml  build.rs
c_ffi/c_src/: bar.c  bar.h
c_ffi/src/: main.rs
core_game_shell/: Cargo.toml
core_game_shell/src/: aabb.rs  events.rs  lib.rs  player_input.rs  rand.rs
csharp_class_generator/: Cargo.toml  README.md
csharp_class_generator/src/: class.rs  function.rs  generic_adt.rs  lispy.rs  main.rs  (+1 more)
csharp_ffi/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  setups.sh
falling_sand/: Cargo.toml  README.md
falling_sand/src/: color.rs  image.rs  main.rs  sand.rs  timer.rs  types.rs  util.rs  world.rs
midi_tester/: Cargo.toml  README.md
noise_generator/: .gitignore  Cargo.toml  README.md  ROADMAP.md
noise_generator/crates/: ARCHITECTURE.md  README.md
noise_generator/crates/rcontainers/: Cargo.toml
noise_generator/crates/rcontainers/src/: grid.rs
noise_generator/crates/rimg/: Cargo.toml
noise_generator/crates/rimg/src/: lib.rs
noise_generator/crates/rmath/: Cargo.toml
noise_generator/crates/rmath/src/: index_1d_to_2d.rs  index_2d_to_1d.rs  lerp.rs  lib.rs  map_to_range.rs  quintic.rs  smoothstep.rs  vec2d.rs
noise_generator/crates/rmath/src/hash/: fnv1a.rs  mod.rs
noise_generator/crates/rmath/src/math/: mod.rs
noise_generator/crates/rrng/: Cargo.toml
noise_generator/crates/rrng/src/: lib.rs  noise.rs  perlin.rs  rng.rs
noise_generator/src/: main.rs
sdf_renderer/: Cargo.toml  README.md
sexpr_parser/: Cargo.toml  README.md
sexpr_parser/backends/: backend_c.json
sexpr_parser/src/: environment.rs  error.rs  location.rs  main.rs  parser.rs  tokenizer.rs
sexpr_parser/src/backends/: file.rs  mod.rs
sexpr_parser/src/backends/targetv1/: c_backend.rs  mod.rs
sexpr_parser/src/intermediate_representation/: mod.rs
tcp_client_server/: README.md
tcp_client_server/client/: Cargo.toml  test.txt
tcp_client_server/client/src/: main.rs
tcp_client_server/core_game/: Cargo.toml  README.md
tcp_client_server/core_game/src/: lib.rs  string.rs
terminal/: Cargo.toml  README.md
terminal_2/: Cargo.toml  README.md
(+69 files in other folders)
