[package]
name = "redlinex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
rcontainers = {path="./crates/rcontainers"}
rimg = {path="./crates/rimg"}
rmath = {path="./crates/rmath"}
rrng = {path="./crates/rrng"}