[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_connection = {path="../core_connection"}
core_game = {path="../core_game", features=["serde_support"]}
core_time = {path="../core_time"}
winit = "0.26.1"
