[package]
name = "core_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde_support = ["serde", "serde_json"]

[dependencies]
serde = {version="1.0", features = ["derive"], optional=true}
serde_json = {version="1.0",  optional=true}
